--- a/catalog.html
+++ b/catalog.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Нёрдс</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="favicon/180.png">
   </head>
+
 <body>
     <header class="main-header catalog">
     <nav>
@@ -32,13 +34,13 @@
             <li>
                 <p>ОТ 0 ДО 15 000</p>
             </li>
-        </ul>  
+        </ul>
       </fieldset>
-      <fieldset> 
+      <fieldset>
         <legend>Сетка</legend>
         <ul>
             <li><label><input name="choice" type="radio" value="adapt" checked><span>Адаптивная</span></label></li>
-            <li><label><input name="choice" type="radio" value="fix"><span>Фиксированная</span></label></li> 
+            <li><label><input name="choice" type="radio" value="fix"><span>Фиксированная</span></label></li>
             <li><label><input name="choice" type="radio" value="rub"><span>Резиновая</span></label></li>
         </ul>
       </fieldset>
@@ -48,7 +50,7 @@
             <li><label><input name="check" type="checkbox" value="slider" checked><span>Слайдер</span></label></li>
             <li><label><input name="check" type="checkbox" value="adv"><span>Блок преимуществ</span></label></li>
             <li><label><input name="check" type="checkbox" value="news" checked><span>Новости</span></label></li>
-            <li><label><input name="check" type="checkbox" value="gallery"><span>Галерея</span></label></li>  
+            <li><label><input name="check" type="checkbox" value="gallery"><span>Галерея</span></label></li>
             <li><label><input name="check" type="checkbox" value="bin"><span>Корзина</span></label></li>
         </ul>
       </fieldset>
@@ -57,7 +59,7 @@
    <section>
     <h2>Список сайтов</h2>
     <h5>СОРТИРОВАТЬ</h5>
-    <ul> 
+    <ul>
         <li><a href="#">ПО ЦЕНЕ</a></li>
         <li><a href="#">ПО ТИПУ</a></li>
         <li><a href="#">ПО НАЗВАНИЮ</a></li>
@@ -71,31 +73,31 @@
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
-        <li> 
+        <li>
             <img src="img/pink.jpg" width="359" height="578" alt="Пинк">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
-        <li> 
+        <li>
             <img src="img/borodinsky.jpg" width="359" height="578" alt="Бородинский">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
-        <li> 
+        <li>
             <img src="img/mishka.jpg" width="359" height="578" alt="Мишка">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
-        <li> 
+        <li>
             <img src="img/aplus.jpg" width="359" height="578" alt="А плюс">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
-        <li> 
+        <li>
             <img src="img/kvast.jpg" width="359" height="578" alt="Кваст">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
@@ -130,6 +132,7 @@
           <li><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть FB"></li>
           <li><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть INSTA"></li>
         </ul>
+      </section>
     <section class="footer-promo">
       <p><b>Давайте дружить, это выгодно!</b></p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
