--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Нёрдс</title>
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="img/icons/icon/180.png">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <link rel="icon" href="favicon.ico"> <!--в видео, которое смотрела последнее, Николай говорил, что этого достаточно, поэтому всё остальное удалила -->
+
 </head>
 
 <body>
@@ -21,7 +23,7 @@
             <li><a href="">Корзина</a></li>
         </ul>
     </nav>
-    <p>Долго, дорого,<br>скрупулезно.</p>
+    <p class="text">Долго, дорого,<br>скрупулезно.</p>
     <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
     <a href="#">УЗНАТЬ БОЛЬШЕ</a>
     <img src="img/phones.jpg" width="760" height="431" alt="картинка с телефонами справа">
@@ -33,27 +35,27 @@
     <h2>Услуги</h2>
     <ul>
             <li><img src="img/web.png" width="300" height="146" alt="Картинка красная">
-            <h3>ВЕБ-САЙТЫ</h3>
+            <h3 class="web">ВЕБ-САЙТЫ</h3>
             <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
             <a href="#">ЗАКАЗАТЬ</a></li>
             <li><img src="img/app.png" width="300" height="146" alt="Картинка зеленая с телефонами">
-            <h3>ПРИЛОЖЕНИЯ</h3>
+            <h3 class="app">ПРИЛОЖЕНИЯ</h3>
             <p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
             <a href="#">ЗАКАЗАТЬ</a></li>
             <li><img src="img/pres.png" width="300" height="146" alt="Картинка желтая с экраном">
-            <h3>ПРЕЗЕНТАЦИИ</h3>
+            <h3 class="pres">ПРЕЗЕНТАЦИИ</h3>
             <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
             <a href="#">ЗАКАЗАТЬ</a></li>
     </ul>
   </section>
   <section class="about">
     <h2>О нас</h2>
-    <p>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</p>
+    <p class="slogan">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</p>
     <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
   </section>
   <section class="companies">
     <h2>Производители</h2>
-    <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
+    <p class="do">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
     <ul>
       <li><p>Веб-сайтов любой сложности</p></li>
       <li><p>Мобильных приложений для iOS и Android</p></li>
@@ -61,14 +63,14 @@
     </ul>
     </section>
     <!--раз фоновая, значит будет добавляться посредством background в css?-->
-    <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
+    <p class="do">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
       <table>
-        <tr>
+        <tr class="numbers">
           <td>146%</td>
           <td>100%</td>
           <td>50%</td>
         </tr>
-        <tr>
+        <tr class="subtext">
         <th>Уровень<br>cамоотдачи</th>
         <th>Соблюдение<br>cроков</th>
         <th>Минимальная<br>предоплата</th>
@@ -83,7 +85,7 @@
 </main>
 <footer class="main-footer">
   <h2>NЁRDS DESIGN STUDIO</h2>
-  <p>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
+  <p class="window">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
   <a href="#">НАПИШИТЕ НАМ</a>
   <img src="img/mark.png" width="231" height="190" alt="Точка Нёрдс на карте">
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
@@ -95,8 +97,8 @@
     </ul>
     </section>
 <section class="footer-promo">
-  <p><b>Давайте дружить, это выгодно!</b></p>
-  <p>Скидка 10% для друзей из социальных сетей.</p>
+  <p class="footer-text"><b>Давайте дружить, это выгодно!</b></p>
+  <p class="footer-text_">Скидка 10% для друзей из социальных сетей.</p>
 </section>
 </footer>
 </body>
