--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <a><img src="img/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс">
         </a>
         <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Клиенты</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
-            <li><a href="">Контакты</a></li>
-            <li><a href="">Корзина</a></li>
+            <li><a class="nav" href="">Студия</a></li>
+            <li><a class="nav" href="">Клиенты</a></li>
+            <li><a class="nav" href="catalog.html">Магазин</a></li>
+            <li><a class="nav" href="">Контакты</a></li>
+            <li><a class="nav" href="">Корзина</a></li>
         </ul>
       </nav>
     <p class="text">Долго, дорого,<br>скрупулезно.</p>
-    <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
-    <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+    <p class="description">Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+    <a class="know" href="#">УЗНАТЬ БОЛЬШЕ</a>
     <img src="img/phones.jpg" width="760" height="431" alt="картинка с телефонами справа">
 </header>
 
@@ -35,42 +35,42 @@
     <h2>Услуги</h2>
     <ul>
             <li><img src="img/web.png" width="300" height="146" alt="Картинка красная">
-            <h3 class="web">ВЕБ-САЙТЫ</h3>
-            <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
-            <a href="#">ЗАКАЗАТЬ</a></li>
+            <h3 class="services">ВЕБ-САЙТЫ</h3>
+            <p class="description">Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
+            <a class="red" href="#">ЗАКАЗАТЬ</a></li>
             <li><img src="img/app.png" width="300" height="146" alt="Картинка зеленая с телефонами">
-            <h3 class="app">ПРИЛОЖЕНИЯ</h3>
-            <p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
-            <a href="#">ЗАКАЗАТЬ</a></li>
+            <h3 class="services">ПРИЛОЖЕНИЯ</h3>
+            <p class="description">Покорите топ-10 приложений<br>в AppStore и Google Play</p>
+            <a class="green" href="#">ЗАКАЗАТЬ</a></li>
             <li><img src="img/pres.png" width="300" height="146" alt="Картинка желтая с экраном">
-            <h3 class="pres">ПРЕЗЕНТАЦИИ</h3>
-            <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
-            <a href="#">ЗАКАЗАТЬ</a></li>
+            <h3 class="services">ПРЕЗЕНТАЦИИ</h3>
+            <p class="description">Вы даже не подозреваете,<br>насколько вы изумительны!</p>
+            <a class="yellow" href="#">ЗАКАЗАТЬ</a></li>
     </ul>
   </section>
   <section class="about">
     <h2>О нас</h2>
     <p class="slogan">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</p>
-    <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+    <p class="description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
   </section>
   <section class="companies">
     <h2>Производители</h2>
     <p class="do">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
     <ul>
-      <li><p>Веб-сайтов любой сложности</p></li>
-      <li><p>Мобильных приложений для iOS и Android</p></li>
-      <li><p>Слайдшоу и видео для корпоративных презентаций</p></li>
+      <li><p class="description">Веб-сайтов любой сложности</p></li>
+      <li><p class="description">Мобильных приложений для iOS и Android</p></li>
+      <li><p class="description">Слайдшоу и видео для корпоративных презентаций</p></li>
     </ul>
     </section>
     <!--раз фоновая, значит будет добавляться посредством background в css?-->
     <p class="do">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
       <table>
         <tr class="numbers">
-          <td>146%</td>
-          <td>100%</td>
-          <td>50%</td>
+          <td>146<sup>%</sup></td>
+          <td>100<sup>%</sup></td>
+          <td>50<sup>%</sup></td>
         </tr>
-        <tr class="subtext">
+        <tr class="clarification">
         <th>Уровень<br>cамоотдачи</th>
         <th>Соблюдение<br>cроков</th>
         <th>Минимальная<br>предоплата</th>
@@ -91,14 +91,14 @@
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
   <section class="footer-info">
     <ul>
-      <li><a href=""><span>ВКонтакте</span></a><li>
-      <li><a href=""><span>Facebook</span></a><li>
-      <li><a href=""><span>Instagram</span></a><li>
+      <li><a href=""><span class="icon">ВКонтакте</span></a><li>
+      <li><a href=""><span class="icon">Facebook</span></a><li>
+      <li><a href=""><span class="icon">Instagram</span></a><li>
     </ul>
     </section>
 <section class="footer-promo">
-  <p class="footer-text"><b>Давайте дружить, это выгодно!</b></p>
-  <p class="footer-text_">Скидка 10% для друзей из социальных сетей.</p>
+  <p><b>Давайте дружить, это выгодно!</b></p>
+  <p class="footer-text">Скидка 10% для друзей из социальных сетей.</p>
 </section>
 </footer>
 </body>
