--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <p class="do">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
       <table>
         <tr class="numbers">
-          <td>146<sup>%</sup></td>
-          <td>100<sup>%</sup></td>
-          <td>50<sup>%</sup></td>
+          <td>146<sup class="percent">%</sup></td>
+          <td>100<sup class="percent">%</sup></td>
+          <td>50<sup class="percent">%</sup></td>
         </tr>
-        <tr class="clarification">
+        <tr>
         <th>Уровень<br>cамоотдачи</th>
         <th>Соблюдение<br>cроков</th>
         <th>Минимальная<br>предоплата</th>
@@ -84,9 +84,9 @@
   </section>
 </main>
 <footer class="main-footer">
-  <h2>NЁRDS DESIGN STUDIO</h2>
+  <h2 class="map-heading">NЁRDS DESIGN STUDIO</h2>
   <p class="window">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
-  <a href="#">НАПИШИТЕ НАМ</a>
+  <a class="write" href="#">НАПИШИТЕ НАМ</a>
   <img src="img/mark.png" width="231" height="190" alt="Точка Нёрдс на карте">
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
   <section class="footer-info">
@@ -97,7 +97,7 @@
     </ul>
     </section>
 <section class="footer-promo">
-  <p><b>Давайте дружить, это выгодно!</b></p>
+  <p><b class="benefit">Давайте дружить, это выгодно!</b></p>
   <p class="footer-text">Скидка 10% для друзей из социальных сетей.</p>
 </section>
 </footer>
