--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p class="slogan">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</p>
     <p class="description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
   </section>
-  <section class="companies">
+    <section class="about"> <!--поменяла на about, потому что это левая колонка-->
     <h2>Производители</h2>
     <p class="do">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
     <ul>
@@ -62,13 +62,11 @@
       <li><p class="description">Мобильных приложений для iOS и Android</p></li>
       <li><p class="description">Слайдшоу и видео для корпоративных презентаций</p></li>
     </ul>
-  </div>
     </section>
-
     <!--раз фоновая, значит будет добавляться посредством background в css?-->
-    <div class="block2">
+    <section class="block2">
     <p class="do">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
-      <table>
+    <table class="table">
         <tr class="numbers">
           <td>146<sup class="percent">%</sup></td>
           <td>100<sup class="percent">%</sup></td>
@@ -80,7 +78,8 @@
         <th class="subtext">Минимальная<br>предоплата</th>
       </tr>
       </table>
-    </div>
+    </section>
+  </div>
 
 
   <section class="partners">
