--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="header">
       <header class="main-header">
     <nav>
         <a><img src="img/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс"></a>
@@ -26,8 +27,9 @@
     <a class="know" href="#">УЗНАТЬ БОЛЬШЕ</a>
     <img src="img/phones.jpg" width="760" height="431" alt="картинка с телефонами справа">
 </header>
+</div>
 
-
+<div class="services1">
 <main class="main">
   <h1>Интернет магазин «Nerds»</h1>
   <section class="services">
@@ -47,14 +49,14 @@
             <a class="yellow" href="#">ЗАКАЗАТЬ</a></li>
     </ul>
   </section>
+</div>
 
   <div class="about1">
   <section class="about">
         <h2>О нас</h2>
     <p class="slogan">Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</p>
     <p class="description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
-  </section>
-    <section class="about"> <!--поменяла на about, потому что это левая колонка-->
+
     <h2>Производители</h2>
     <p class="do">ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
     <ul>
@@ -62,7 +64,8 @@
       <li><p class="description">Мобильных приложений для iOS и Android</p></li>
       <li><p class="description">Слайдшоу и видео для корпоративных презентаций</p></li>
     </ul>
-    </section>
+  </section>
+
     <!--раз фоновая, значит будет добавляться посредством background в css?-->
     <section class="block2">
     <p class="do">С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
@@ -81,20 +84,24 @@
     </section>
   </div>
 
-
+  <div class="img1">
   <section class="partners">
     <a href="#"><img src="img/academy-logo.png" width="199" height="68" alt="Лого Академии"></a>
     <a href="#"><img src="img/borod-logo.png" width="209" height="90" alt="Лого Бородинский"></a>
     <a href="#"><img src="img/pink-logo.png" width="185" height="52" alt="Лого Пинк"></a>
     <a href="#"><img src="img/mishka-logo.png" width="173" height="84" alt="Лого Мишка"></a>
   </section>
+</div>
 </main>
+
+<div class="map">
 <footer class="main-footer">
   <h2 class="map-heading">NЁRDS DESIGN STUDIO</h2>
   <p class="window">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
   <a class="write" href="#">НАПИШИТЕ НАМ</a>
   <img src="img/mark.png" width="231" height="190" alt="Точка Нёрдс на карте">
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
+</div>
 
   <div class="block3">
   <section class="footer-info">
