--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   </head>
 
 <body>
-  <div class="header">
+  <div class="header1">
     <header class="main-header catalog">
     <nav>
       <a href="index.html"><img src="img/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс">
@@ -27,10 +27,11 @@
     </header>
   </div>
 
-
 <main>
   <div class="catalog-grid">
-    <div class="list">
+    <section class="list">
+      <h2>Фильтр товаров</h2>
+       <form method="get" action="https://echo.htmlacademy.ru">
         <legend class="filter">Стоимость:</legend>
         <ul>
             <li>
@@ -56,13 +57,11 @@
             <li><label><input name="check" type="checkbox" value="bin"><span class="choice">Корзина</span></label></li>
         </ul>
       </fieldset>
-
       <button type="submit">Показать</button>
     </form>
-  </div>
-</div>
+  </section>
 
-<div class="catalog">
+<section class="catalog">
      <h2>Список сайтов</h2>
     <h5 class="filter">Сортировать:</h5>
     <ul>
@@ -110,7 +109,9 @@
             <button type="button">9 900 ₽</button>
         </li>
     </ul>
+  </section>
   </div>
+
 
   <div class="num">
     <ul>
