--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
 <body>
   <div class="header">
       <header class="main-header">
+
     <nav>
         <a><img src="img/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс"></a>
-        <ul>
+      <ul class="index-flex">
             <li><a class="nav" href="">Студия</a></li>
             <li><a class="nav" href="">Клиенты</a></li>
             <li><a class="nav" href="catalog.html">Магазин</a></li>
             <li><a class="nav" href="">Контакты</a></li>
             <li><a class="nav" href="">Корзина</a></li>
         </ul>
-    </nav>
+  </section>
+</nav>
+
     <p class="text">Долго, дорого,<br>скрупулезно.</p>
     <p class="description">Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
     <a class="know" href="#">УЗНАТЬ БОЛЬШЕ</a>
     <img src="img/phones.jpg" width="760" height="431" alt="картинка с телефонами справа">
 </header>
+</div>
 </div>
 
 <div class="services1">
@@ -34,7 +38,7 @@
   <h1>Интернет магазин «Nerds»</h1>
   <section class="services">
     <h2>Услуги</h2>
-    <ul>
+    <ul class="services-flex">
             <li><img src="img/web.png" width="300" height="146" alt="Картинка красная">
             <h3 class="services">ВЕБ-САЙТЫ</h3>
             <p class="description">Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
@@ -105,7 +109,7 @@
 
   <div class="block3">
   <section class="footer-info">
-    <ul>
+    <ul class="icon-flex">
       <li><a href=""><span class="icon">ВКонтакте</span></a><li>
       <li><a href=""><span class="icon">Facebook</span></a><li>
       <li><a href=""><span class="icon">Instagram</span></a><li>
