--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header">
       <header class="main-header">
 
-    <nav>
+    <nav class="general">
         <a><img src="img/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс"></a>
       <ul class="index-flex">
             <li><a class="nav" href="">Студия</a></li>
